# APRobot

./: .gitignore  ARPProgramm.drawio  CMakeLists.txt  README.md  message  robot_vision.ipynb  test.txt
Code Client Server/sockets/: BroadcastReceiver.c:Zone.Identifier  TCPEchoClient  TCPEchoClient.c
bAPRcourse/recievedData.txt/: odom  scan.json
bAPRcourse/sockets/: BroadcastReceiver  BroadcastSender  TCPEchoClient  TCPEchoClient.c  TCPEchoServer  TCPEchoServer-Fork  TCPEchoServer-Fork-SIGCHLD  TCPEchoServer-ForkN  TCPEchoServer-Select  TCPEchoServer-Thread  UDPEchoClient  UDPEchoServer  roblyatCompileme.sh  roblyatTCPEchoTurtle  roblyatTCPEchoTurtle.c
include/: laserScaler.h  linearControl.h  localization.h  odomScaler.h  recieve.h  send.h  tcpHandler.h
robylat/: odomScaler  odomScaler.cpp
robylat/output/: odomScaler
src/: laserScaler.cpp  linearControl.cpp  localization.cpp  main.cpp  odomScaler.cpp  tcpHandler.cpp  tcpHandler.h  testPrint.cpp  thread1.cpp
turtle/: CMakeLists.txt  package.xml
turtle/cfg/: reconfigure.cfg  rvizCfg.rviz
turtle/launch/: turtle.launch
turtle/maps/: myWorld.world
turtle/src/: robotController.cpp
utils/: circle.ipynb  laserTester.cpp
